* gelegentliche Verbindungsverluste von UGW-Routern korrigiert
* 5-GHz-Kanäle (auch Outdoor) sind nun im Master-Modus verfügbar (zuvor nur indoor-Kanäle)
* Unterstützung vieler neuer Geräte (aktuelle Versionen von TL-WR1043nd, Nanostations XW, ...)
* bessere Voreinstellung der Netzwerkkonfiguration von 5-GHz-Geräten
* Client-Isolation ist automatisch aktiviert
* Firewall-Konfiguration für Zugänglichkeit vom VPN-Gateway und Nachbarknoten aus korrigiert
* Gateway-Interface:
** Rücksetzung eines Gateway-Offsets mit einem Klick
** Aktivieren/Deaktivieren einzelner Dienste (anstelle der Blacklist)
** Umschaltung der Gateway-Sortierung (manuell, etx, hop) vorerst nur manuell möglich
* die UGW- und die Wifidog-Funktion sind vorerst nicht verfügbar

== Technikdetails ==
* VPN-Tunnel-Statistiken werden nicht mehr mehrmals pro Minute im Flash gespeichert
** http://dev.on-i.de/changeset/f31d724437b255d18f90b74bc56f9f97e542b508/on_firmware
* keine HNA-Veröffentlichung einer IP im 192.168.0-Bereich durch Gateway-Server und UGW-Router
** stattdessen reine Announcierung via olsrd-Nameservice
* DNS-Konfiguration via olsrs-nameservice-Announcements:
** http://dev.on-i.de/changeset/079254f4b8ab7dd0757bfdd39af84637f7bbbceb/on_firmware
** es gibt nun keine gegenseitigen DNS-Anfragen der UGWs untereinander mehr
* verbesserte NTP-Konfiguration via olsrs-nameservice-Announcements:
** http://dev.on-i.de/changeset/df96edf2e7ca4e8ef060c2f608d91e8c02a48eff/on_firmware
** NTP-Server werden nun auch ohne VPN-Zertifikat gefunden
* Verwendung des uci-defaults-Mechanismus für Erst- oder Upgrade-Konfiguration:
** http://wiki.openwrt.org/doc/uci#defaults
** explizite Versionsmigrationen (für Firmware-Upgrades)
* Umstieg von ntpclient auf busybox-NTP-Server:
** http://dev.on-i.de/changeset/de91609d66b99e7d33f33fd85988fb2047c90c8a/on_firmware
* Folgende Features wurden entfernt:
** Konfigurations-Reset
** Reboot im Opennet-Menü
* Umstellung von /usr/bin/run-parts.sh auf /bin/run-parts (für cronjobs)
